プロジェクト作成

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+UserSettings/
+Assets/ExampleAssets/
+Assets/TutorialInfo/
