--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,8 @@ UserSettings/
 Assets/ExampleAssets/
 Assets/TutorialInfo/
 Assets/_Local/
+Assets/Plugins/System.Runtime.CompilerServices.Unsafe.dll
+Assets/Plugins/System.Runtime.CompilerServices.Unsafe.dll.meta
+Assets/Plugins.meta
+Assets/Scripts/ZString/csc.rsp
+Assets/Scripts/ZString/
