通路の脇に部屋を生成できるようにした

--- a/Assets/_Test/LSystem/StageGene.asmdef
+++ b/Assets/_Test/LSystem/StageGene.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "StageGene",
+    "name": "DungeonBuild",
     "rootNamespace": "",
     "references": [
         "GUID:33661e06c33d31b4c9223810bf503247"
