ライブラリ追加

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ Assets/Plugins/System.Runtime.CompilerServices.Unsafe.dll.meta
 Assets/Plugins.meta
 Assets/Scripts/ZString/csc.rsp
 Assets/Scripts/ZString/
+Assets/Plugins/Demigiant/
